Fixed h2 contrast, email labels, for accessability

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -712,14 +712,16 @@ header {
     .callMe:after {
         content: '';
         display: block;
-        width: 70px;
-        height: 70px;
+        width: 200px;
+        height: 200px;
         position: absolute;
         top: 0px;
         left: 0px;
         border-top: 2px solid turquoise;
         border-left: 2px solid turquoise;
     }
+
+ 
     
     h2 {
         //text-align: center;
